--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <a href="https://sdeklyen.github.io/staticlayout/" target="_blank">
         <img src="css/assets/staticlayout.PNG" alt="staticLayoutProject" width="300" height="200" class="staticlayoutImage">
       </a>
-      <a href="https://sdeklyen.github.io/CSSCreature/" target="_blank">
+      <a href="https://sdeklyen.github.io/CSSCreature2/" target="_blank">
         <img src="css/assets/gooper.PNG" alt="CSSCreature" width="300" height="200" class="CSSCreatureImage">
       </a>
       <a href="https://jsaug2019-nba-player-database.firebaseapp.com/" target="_blank">
