--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/samdeklyen@gmail.com" method="post">
         <fieldset id="fs-frm-inputs">
           
-          <div class="form-group">
+          <div class="form-group" action="//formspree.io/samdeklyen@gmail.com" method="POST">
           <label for="full-name">Full Name</label>
           <input class="form-control" type="text" name="name" id="full-name" placeholder="First and Last" required="">
           </div>
