--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <br>
           <br>
             <h1 class="display-4">Sam DeKlyen</h1>
-            <h3 class="lead">Javascript Developer in Training</h3>
+            <h3 class="lead">Javascript Developer</h3>
         </div>
     </div>
 <!--About Me-->
@@ -52,13 +52,13 @@
         <div class ="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <p>My name is Sam DeKlyen. I am attending the Eleven Fifty Academy's Javascript course with the goal of becoming a developer and building my career.</p>
+                    <p>My name is Sam DeKlyen. I completed the Eleven Fifty Academy's Javascript course with the goal of becoming a developer and building my career.</p>
                 </div>
                 <div class="col-sm-4">
                     <p>I attended Butler University from 2011 to 2016 and graduating with a journalism degree. After exploring the job market and doing contract work for years, I have dedcided to shift my focus into software development. With previous work with ad agencies, journalism, and freelancing, I bring a wide range of experience to everything I do.</p>
                 </div>
                 <div class="col-sm-4">
-                    <p>You can get to know me better by scrolling down and reading further, or you can download <a class="about_link" href="/1-jsFundamentals/JavaScriptPortfolio/Resume 1.pdf" target="_blank" download>my resume</a> or check out <a class="about_link" href="https://www.linkedin.com/in/sam-deklyen-40028381/" target="_blank">my LinkedIn</a> and <a class="about_link" href="https://github.com/sdeklyen" target="_blank">GitHub</a> through these links!</p>
+                    <p>You can see my skills and projects I have done by scrolling down and reading further, or you can download <a class="about_link" href="css/assets/Resume 1.docx" target="_blank" download>my resume</a> or check out <a class="about_link" href="https://www.linkedin.com/in/sam-deklyen-40028381/" target="_blank">my LinkedIn</a> and <a class="about_link" href="https://github.com/sdeklyen" target="_blank">GitHub</a> through these links!</p>
                 </div>
             </div>
         </div>
@@ -102,6 +102,21 @@
           </div>
         </div>
         <br>
+        <div class="row">
+          <div class="col-sm-4 text-center">
+            <p>Angular</p>
+            <img src="css/assets/icons8-angularjs-50.png">
+          </div>
+          <div class="col-sm-4 text-center">
+            <p>React</p>
+            <img src="css/assets/icons8-react-64.png">
+          </div>
+          <div class="col-sm-4 text-center">
+            <p>Node</p>
+            <img src="css/assets/icons8-nodejs-64.png">
+          </div>
+        </div>
+        <br>
         <h3 class="text-center">And much more!</h3>
         </div>
       </div>
@@ -115,15 +130,18 @@
     <div id="projects">
       <h1 class="myProjects text-center text-uppercase text-white">My Projects</h1>
       <div class="flexContainer text-center">
-      <a href="https://sdeklyen.github.io/staticlayout/" target="_blank">
-        <img src="css/assets/staticlayout.PNG" alt="staticLayoutProject" width="300" height="200" class="staticlayoutImage">
+      <a href="https://sportsbetlog.herokuapp.com" target="_blank">
+        <img src="css/assets/sportsbetlog.PNG" width="300" height="200" class="sportsBetLogImage">
       </a>
-      <a href="https://sdeklyen.github.io/CSSCreature2/" target="_blank">
-        <img src="css/assets/gooper.PNG" alt="CSSCreature" width="300" height="200" class="CSSCreatureImage">
+      <p class="description">Node backend and React frontend Sports Bet Log Project</p>
+      <a href="https://e-recruit-client.herokuapp.com" target="_blank">
+        <img src="css/assets/erecruit.PNG" alt="E-Recruit App" width="300" height="200" class="eRecruitImage">
       </a>
+      <p class="description">Node backend and Angular frontend E-Recruit App Project </p>
       <a href="https://jsaug2019-nba-player-database.firebaseapp.com/" target="_blank">
         <img src="css/assets/apiproject.PNG" alt="APIProject" width="300" height="200" class="APIProjectImage">
       </a>
+      <p class="description">Javascript NBA player search API Project</p>
       </div>
 
     </div>
